tests/fixtures/errors/non_exhaustive_index_match.gcl
// Error: non-exhaustive index match — missing Insertion variant
index Maneuver = { Departure, Correction, Insertion }

node result: Dimensionless[Maneuver] = for m: Maneuver {
    match m {
        Maneuver::Departure => 1.0,
        Maneuver::Correction => 2.0,
    }
};
